<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.StepOne">

    <include
        android:id="@+id/include3"
        layout="@layout/step_toolbar"></include>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3">

        <include layout="@layout/lock_icon"></include>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/step_1_of_3"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_your_plan"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/check"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:text="@string/no_commitments_canle_at_any_time"
                    android:textColor="#494242"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/check"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:text="@string/everything_on_netflix_for_one_low_price"
                    android:textColor="#494242"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/check"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:text="@string/no_adds_and_no_extra_fees_ever"
                    android:textColor="#494242"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@color/activeDots"
                android:text="@string/see_your_plans"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>